--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,15 @@
-[tool.poetry]
-name = "cookiecutter-poetry"
-version = "0.1.0"
-description = "A python cookiecutter application to create a new python project that uses poetry to manage its dependencies."
-authors = ["Florian Maas <fpgmaas@gmail.com>"]
-repository = "https://github.com/fpgmaas/cookiecutter-poetry"
-documentation = "https://fpgmaas.github.io/cookiecutter-poetry/"
+[project]
+name = "cookiecutter-poetry-deep-learning"
+version = "0.0.1"
+description = "A python cookiecutter template for deep learning projects using Poetry for dependency management."
+authors = [
+    {name="Francisco A. Molina Bakhos", email="fmolina@icn2.net"}
+]
+repository = "https://github.com/aicn2/cookiecutter-poetry-deep-learning"
+# TODO: To be developed
+# documentation = "https://fpgmaas.github.io/cookiecutter-poetry/"
 readme = "README.md"
-keywords = ['cookiecutter', 'template', 'poetry']
+keywords = ['cookiecutter', 'template', 'poetry', 'deep-learning']
 packages = [
   {include = "cookiecutter_poetry"}
 ]
@@ -15,10 +18,10 @@ include = [
   'cookiecutter.json',
   'hooks/*'
 ]
-
-[tool.poetry.dependencies]
-python = ">=3.8,<4.0"
-cookiecutter = "^2.1.1"
+requires-python= ">=3.9,<4.0"
+dependencies=[
+    "cookiecutter(>=2.1.1)"
+]
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
@@ -37,7 +40,7 @@ mkdocs-material = "^8.5.10"
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry.scripts]
+[project.scripts]
 ccp = 'cookiecutter_poetry.cli:main'
 
 [tool.pytest.ini_options]
@@ -62,7 +65,9 @@ show_error_codes = "True"
 
 [tool.deptry]
 extend_exclude = [
-  ".+/test_foo.py"
+  '.+/test_foo.py',
+    '\{\{cookiecutter.project_name\}\}/\{\{cookiecutter.project_slug\}\}/'
+    # These dependencies should be controlled by the pyproject.toml inside the indicated directory
 ]
 
 [tool.deptry.per_rule_ignores]
