--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -1,17 +1,19 @@
-[tool.poetry]
-name = "{{cookiecutter.project_slug}}"
+[project]
+name = "{{cookiecutter.project_name}}"
 version = "0.0.1"
 description = "{{cookiecutter.project_description}}"
-authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
+authors = [
+    {name="{{cookiecutter.author}}", email="{{cookiecutter.email}}"}
+]
 repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
 documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"
 readme = "README.md"
-packages = [
-  {include = "{{cookiecutter.project_slug}}"}
+requires-python= ">=3.9,<4.0"
+dependencies=[
+    "torch(>=2.6.0, <3.0.0)",
+    "torchvision(>=0.21.0, <0.22.0)",
+    "pandas(>=2.2.3, <3.0.0)"
 ]
-
-[tool.poetry.dependencies]
-python = ">=3.8,<4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
