--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ dependencies=[
     "cookiecutter(>=2.1.1)"
 ]
 
+[tool.poetry]
+package-mode = false
+
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 pre-commit = "^2.20.0"
