--- a/{{cookiecutter.project_name}}/pyproject.toml
+++ b/{{cookiecutter.project_name}}/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
 documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"
 readme = "README.md"
-requires-python= ">=3.9,<4.0"
+requires-python= ">=3.10,<4.0"
 dependencies=[
     "torch(>=2.6.0, <3.0.0)",
     "torchvision(>=0.21.0, <0.22.0)",
@@ -17,6 +17,28 @@ dependencies=[
     "oyaml (>=1.0,<2.0)",
     "tqdm (>=4.67.1,<5.0.0)"
 ]
+
+dependencies=[
+    "torch(>=2.6.0, <3.0.0)",
+    "torchvision(>=0.21.0, <0.22.0)",
+    "pandas(>=2.2.3, <3.0.0)",
+    "wandb (>=0.19.7,<0.20.0)",
+    "oyaml (>=1.0,<2.0)",
+    "tqdm (>=4.67.1,<5.0.0)",
+    "codecarbon (>=2.8.3,<3.0.0)",
+    "types-tqdm (>=4.67.0.20250404,<5.0.0.0)",
+    "pandas-stubs (>=2.2.3.250308,<3.0.0.0)",
+    "numpy (>=2.2.4,<3.0.0)"
+]
+
+[tool.poetry.dependencies]
+torch = {version = ">=2.6.0, <3.0.0"}
+pandas = {version = ">=2.2.3, <3.0.0"}
+wandb = {version = ">=0.19.7,<0.20.0"}
+oyaml = {version = ">=1.0,<2.0"}
+tqdm = {version = ">=4.67.1,<5.0.0"}
+codecarbon = {version = ">=2.8.3,<3.0.0"}
+numpy = {version = ">=2.2.4,<3.0.0"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
