Adding basic documentation for the created projects with the template

--- a/{{cookiecutter.project_name}}/mkdocs.yml
+++ b/{{cookiecutter.project_name}}/mkdocs.yml
@@ -9,7 +9,8 @@ copyright: Maintained by <a href="https://{{cookiecutter.author_github_handle}}.
 
 nav:
   - Home: index.md
-  - Modules: modules.md
+  - Training: train.md
+  - Testing: test.md
 plugins:
   - search
   - mkdocstrings:
